--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
+  - 2.1.0
   - jruby-19mode
   - rbx-19mode
 
 matrix:
   allow_failures:
     - rvm: 2.0.0
+    - rvm: rbx-19mode
